# pyottaparsec

./: .gitignore  mypy.ini  pyproject.toml
pyottaparsec/: __init__.py  _types.py  buffer.py  internal.py  maybe.py  types.py
pyottaparsec/internal/: types.py
stubs/numba/: __init__.pyi
tests/: Append Test.ipynb
