[tool.poetry]
name = "pyottaparsec"
version = "0.0.1"
description = "Parser combinator for numpy arrays inspired by attoparsec."
authors = ["Christopher Aubut <christopher@aubut.me>"]
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.750.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
