[tool.poetry]
name = "pyottaparsec"
version = "0.0.1"
description = "Parser combinator for numpy arrays inspired by attoparsec."
authors = ["Christopher Aubut <christopher@aubut.me>"]
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.7"
llvmlite = {git = "https://github.com/numba/llvmlite.git"}
numba = {git = "https://github.com/numba/numba.git"}

[tool.poetry.dev-dependencies]
mypy = "^0.750.0"
numpy-stubs = {git = "https://github.com/numpy/numpy-stubs.git"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
